[gd_scene load_steps=9 format=3 uid="uid://bhrn0jet4kfd"]

[ext_resource type="Script" uid="uid://c214clo272fpn" path="res://escenas/Administrador/arrastrar_soltar.gd" id="1_dusqf"]
[ext_resource type="Texture2D" uid="uid://cwqextjtlqg7j" path="res://assets/sprites/ui/volver.png" id="2_jmcnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efkv0"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dusqf"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmcnp"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cf470"]
texture = ExtResource("2_jmcnp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u86mw"]
texture = ExtResource("2_jmcnp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k2ktv"]
texture = ExtResource("2_jmcnp")

[node name="ArrastrarSoltar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dusqf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.152941, 0.329412, 1)

[node name="preguntas" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.103
anchor_top = 0.151
anchor_right = 0.903
anchor_bottom = 0.218
offset_left = -0.160004
offset_top = -10.28
offset_right = -0.160034
offset_bottom = -10.04
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_efkv0")
text = "Arrastrar y soltar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.079
anchor_right = 1.0
anchor_bottom = 0.13
offset_left = 4.0
offset_top = -32.12
offset_right = -3.0
offset_bottom = -32.4
theme_override_font_sizes/font_size = 20
text = "Nombre administrador"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bloque1" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.252
anchor_right = 0.849
anchor_bottom = 0.319
offset_left = 0.279999
offset_top = -10.56
offset_right = -0.280029
offset_bottom = -10.32
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 1"
autowrap_mode = 2

[node name="bloque2" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.334
anchor_right = 0.849
anchor_bottom = 0.401
offset_left = 0.279999
offset_top = -10.52
offset_right = -0.280029
offset_bottom = -10.28
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 2"
autowrap_mode = 2

[node name="bloque3" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.418
anchor_right = 0.849
anchor_bottom = 0.485
offset_left = 0.279999
offset_top = -10.04
offset_right = -0.280029
offset_bottom = -9.79999
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 3"
autowrap_mode = 2

[node name="bloque4" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.5
anchor_right = 0.849
anchor_bottom = 0.569
offset_left = 0.279999
offset_top = -8.0
offset_right = -0.280029
offset_bottom = -10.32
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 4"
autowrap_mode = 2

[node name="bloque5" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.584
anchor_right = 0.849
anchor_bottom = 0.651
offset_left = 0.279999
offset_top = -10.5201
offset_right = -0.280029
offset_bottom = -10.28
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 5"
autowrap_mode = 2

[node name="bloque6" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.668
anchor_right = 0.849
anchor_bottom = 0.735
offset_left = 0.279999
offset_top = -10.04
offset_right = -0.280029
offset_bottom = -9.79999
scale = Vector2(1, 0.990686)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_dusqf")
placeholder_text = "Bloque 6"
autowrap_mode = 2

[node name="guardar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.793
anchor_right = 0.247
anchor_bottom = 0.834
offset_left = 99.8
offset_top = -0.0400391
offset_right = 100.16
offset_bottom = -0.52002
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_jmcnp")
text = "guardar"

[node name="borrador" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.795
anchor_right = 0.462
anchor_bottom = 0.833
offset_left = 100.36
offset_top = -0.599976
offset_right = 100.36
offset_bottom = -0.23999
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_jmcnp")
text = "borrador"

[node name="eliminar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.474
anchor_top = 0.795
anchor_right = 0.665
anchor_bottom = 0.831
offset_left = 99.72
offset_top = -0.599976
offset_right = 100.2
offset_bottom = 0.320068
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_jmcnp")
text = "eliminar"

[node name="volver" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 1095.0
offset_right = 185.0
offset_bottom = 1183.0
theme_override_styles/focus = SubResource("StyleBoxTexture_cf470")
theme_override_styles/pressed = SubResource("StyleBoxTexture_u86mw")
theme_override_styles/normal = SubResource("StyleBoxTexture_k2ktv")

[node name="Mensaje" type="Label" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 1087.0
offset_right = 507.0
offset_bottom = 1207.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="borrador" to="." method="_on_borrador_pressed"]
[connection signal="pressed" from="eliminar" to="." method="_on_eliminar_pressed"]
[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
